# biblialeo

./: README.md  app.py  db.py  magma.py  pyproject.toml
templates/: home.html
