[tool.poetry]
name = "repl_nix_biblialeo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
p7magma = "^0.1.2"
SQLAlchemy = "^2.0.23"
db = "^0.1.1"
Flask-Cors = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
